env/code_53ee0812c54e0/stderr.txt
  File "main.py", line 5
    while(flag=1):
              ^
SyntaxError: invalid syntax
